<resources>
    <string name="app_name">SaMbo</string>
    <string name="AddDate">Add a Client</string>
    <string name="NewDate">New Client</string>
    <string name="Settings">Settings</string>
    <string name="LetstartbycreatingyourDate">Let\'s creating a New Client</string>
    <string name="ClientName">Client Name</string>
    <string name="Clientsphonenumber">Client\'s Phone number</string>
    <string name="selectDate">Select Date</string>
    <string name="Typeofwork">Type of work</string>
    <string name="Total_price">Total Price</string>
    <string name="Paidup">Paid up</string>
    <string name="Residual">Residual</string>
    <string name="Placeofwork">Place of work</string>
    <string name="Reminder">Remind Me</string>
    <string name="selectTime">Select Time</string>
    <string name="NoDates">No Clients</string>
    <string name="reminder_title">Work</string>
    <string name="enterClientName">Enter Client Name</string>
    <string name="enterPhoneNumber">Enter Client\'s Phone number</string>
    <string name="enterPlaceofwork">Enter Place Of work</string>
    <string name="selectTypeOfwork">Select Type Of work</string>
    <string name="enterPaidmoney">Enter Paid Money</string>
    <string name="newdatesavedsuccessfully">Saved a New Date Successfully</string>
    <string name="Failedtosave">Failed to Save</string>
    <string name="CreatingNewDate">Creating New Client</string>
    <string name="View">Open</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Edit">Edit</string>
    <string name="Areyousuretodelete">Are You Sure to Delete</string>
    <string name="Attention">Attention</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="hasbeendeleted">has been Deleted</string>
    <string name="somethingisworng">Something is Wrong</string>
    <string name="Date">Date</string>
    <string name="ThereisnoInternetConnection">There is no Internet Connection</string>
    <string name="UpdateClient">Update Client</string>
    <string name="clientupdatedsuccessfully">Client updated successfully</string>
    <string name="NoTypes">No any type of works</string>
    <string name="NewWork">Add Work</string>
    <string name="WorkName">Work Name</string>
    <string name="EnterWorkName">Enter Work Name</string>
    <string name="EnterTotalPrice">Enter Total Price</string>
    <string name="search_hint">Search...</string>
    <string name="Theamountpaidishigherthanthetotalprice">The Amount paid is higher than the total price</string>
    <string name="InvalidClientName">Invalid Client Name</string>
    <string name="s">\?</string>
    <string name="WorkSaved">Work Saved</string>
    <string name="WorkUpdated">Work Updated</string>
    <string name="TheTypes">The Types</string>
    <string name="InvalidClientPhoneNumber">Invalid Client Phone Number</string>

</resources>
