<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <ImageView
        android:id="@+id/dialog_updateImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/dialog_update_customtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/inputs"
        android:fontFamily="@font/kalam_bold_"
        android:drawableStart="@drawable/type"
        android:drawablePadding="5dp"
        android:hint="@string/WorkName"
        android:inputType="text"
        android:padding="4dp"
        android:textSize="15dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/dialog_updatecustomprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/inputs"
        android:fontFamily="@font/kalam_bold_"
        android:drawableStart="@drawable/money"
        android:drawablePadding="5dp"
        android:hint="@string/Total_price"
        android:inputType="number"
        android:padding="4dp"
        android:textSize="15dp"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_updateCancel_btn"
            android:layout_width="135dp"
            android:layout_height="34dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/kalam_bold_"
            android:background="@drawable/button"
            android:text="@string/Cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12dp" />

        <Button
            android:id="@+id/dialog_updateOk_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/Ok"
            android:fontFamily="@font/kalam_bold_"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12dp" />
    </LinearLayout>
</android.support.v7.widget.CardView>
