<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/SettingsActivity"
    tools:context=".Activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOne">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/Settings"
            android:fontFamily="@font/kalam_bold_"
            android:textColor="@color/colorNameApp"
            android:textSize="20dp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/set_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_app_bar"
        android:fontFamily="@font/kalam_bold_"
        android:paddingStart="8dp"
        android:text="@string/TheTypes"
        android:gravity="center"
        android:textColor="@color/colorNameApp"
        android:textSize="25dp"
        tools:ignore="RtlCompat" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/settingRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/set_TextView"></android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/noTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/icon"
        android:drawableTint="#6C6C6C"
        android:fontFamily="@font/kalam_bold_"
        android:padding="16dp"
        android:text="@string/NoTypes"
        android:textAlignment="center"
        android:textColor="#6C6C6C"
        android:textSize="20dp" />

    <Button
        android:id="@+id/NewWorkbtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:drawableTop="@drawable/ic_add"
        android:padding="2dp"
        android:fontFamily="@font/kalam_bold_"
        android:gravity="center_horizontal"
        android:text="@string/NewWork"
        android:textAllCaps="false"
        app:fontFamily="@font/kalam_bold_"
        android:textColor="@color/colorNameApp"
        tools:ignore="MissingConstraints" />

</RelativeLayout>