<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UpdateActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    tools:context=".Activities.UpdateActivity">

    <include
        android:id="@+id/toolbarUpdate"
        layout="@layout/update_bar_layout"/>


    <EditText
        android:id="@+id/update_name"
        android:fontFamily="@font/kalam_bold_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarUpdate"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/clientname"
        android:drawablePadding="10dp"
        android:hint="@string/ClientName"
        android:inputType="textPersonName"
        android:padding="4dp"
        android:textColor="#244357"
        android:textSize="18dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/update_phone"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/update_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/phonenumber"
        android:drawablePadding="10dp"
        android:fontFamily="@font/kalam_bold_"
        android:hint="@string/Clientsphonenumber"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="phone"
        android:padding="4dp"
        android:textColor="#244357"
        android:textSize="18dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/update_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_phone"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/date"
        android:drawablePadding="10dp"
        android:fontFamily="@font/kalam_bold_"
        android:hint="@string/selectDate"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="date"
        android:padding="4dp"
        android:textColor="#244357"
        android:textSize="18dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/update_Placeofwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_date"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/place"
        android:drawablePadding="10dp"
        android:fontFamily="@font/kalam_bold_"
        android:hint="@string/Placeofwork"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="text"
        android:padding="4dp"
        android:textColor="#244357"
        android:textSize="18dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/update_type_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_Placeofwork"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/type"
        android:drawablePadding="10dp"
        android:fontFamily="@font/kalam_bold_"
        android:hint="@string/Typeofwork"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="text"
        android:padding="4dp"
        android:textColor="#244357"
        android:textSize="18dp"
        tools:ignore="RtlCompat" />


    <EditText
        android:id="@+id/update_total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_type_work"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/money"
        android:drawablePadding="4dp"
        android:enabled="false"
        android:fontFamily="@font/kalam_bold_"
        android:hint="@string/Total_price"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="number"
        android:padding="4dp"
        android:textColor="#244357"
        android:textSize="18dp"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_total_price"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/update_Paid_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/paid"
            android:drawablePadding="4dp"
            android:fontFamily="@font/kalam_bold_"
            android:hint="@string/Paidup"
            android:inputType="number"
            android:padding="4dp"
            android:textColor="#244357"
            android:textSize="18dp"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/update_Residual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/coins"
            android:drawablePadding="4dp"
            android:fontFamily="@font/kalam_bold_"
            android:hint="@string/Residual"
            android:inputType="number"
            android:padding="4dp"
            android:textColor="#244357"
            android:textSize="18dp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <!--<EditText-->
        <!--android:id="@+id/newDate_Time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/linearLayout"-->
        <!--android:layout_marginStart="15dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginEnd="15dp"-->
        <!--android:background="@drawable/inputs"-->
        <!--android:drawableStart="@drawable/time"-->
        <!--android:drawablePadding="10dp"-->
        <!--android:hint="@string/selectTime"-->
        <!--android:importantForAutofill="noExcludeDescendants"-->
        <!--android:inputType="datetime"-->
        <!--android:padding="4dp"-->
        <!--android:textColor="#244357"-->
        <!--android:textSize="18dp"-->
        <!--android:visibility="invisible"-->
        <!--tools:ignore="RtlCompat" />-->


</RelativeLayout>