<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectTypeOfwork"
        android:textColor="@color/colorNameApp"
        android:fontFamily="@font/kalam_bold_"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawableStart="@drawable/type"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="start"
        tools:ignore="RtlCompat" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/typeofworkRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="70dp"
            tools:ignore="RtlCompat"></android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialogCancel_btn"
                android:layout_width="135dp"
                android:layout_height="34dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="@font/kalam_bold_"
                android:text="@string/Cancel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12dp" />

            <Button
                android:id="@+id/dialogOk_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="@font/kalam_bold_"
                android:text="@string/Ok"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>